try to call backend

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         </li>
       </ul>
       <div class="div-block">
-        <a href="#" class="button w-button">Попробуйте Plumbier !</a>
+        <a href="/api/sayhi" class="button w-button">Попробуйте Plumbier !</a>
       </div>
     </div>
   </section>
