--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><!--  This site was created in Webflow. https://www.webflow.com  -->
-<!--  Last Published: Sat May 27 2023 19:22:55 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Sun May 28 2023 12:13:59 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="6470d85173d05fa30977497f" data-wf-site="6470d85173d05fa30977497b">
 <head>
   <meta charset="utf-8">
@@ -25,8 +25,9 @@
       </a>
       <nav role="navigation" class="nav-menu w-nav-menu">
         <a href="#" class="w-nav-link">Главная</a>
-        <a href="#" class="w-nav-link">Детали</a>
-        <a href="#" class="w-nav-link">Связь</a>
+        <a href="#features" class="w-nav-link">Возможности</a>
+        <a href="#tech" class="w-nav-link">Технология</a>
+        <a href="#feedback" class="w-nav-link">Контакт</a>
       </nav>
       <div class="w-nav-button">
         <div class="w-icon-nav-menu"></div>
@@ -48,11 +49,11 @@
         </li>
       </ul>
       <div class="div-block">
-        <a href="/api/sayhi" class="button w-button">Попробуйте Plumbier !</a>
+        <a href="#" class="button w-button">Попробуйте Plumbier !</a>
       </div>
     </div>
   </section>
-  <section class="section-2 wf-section">
+  <section id="features" class="section-2 wf-section">
     <div class="w-container">
       <h1 class="heading-3">Новые возможности</h1>
       <div id="w-node-_47f6ae95-651b-0ca5-520e-71b34607e1e8-0977497f" class="w-layout-layout quick-stack wf-layout-layout">
@@ -86,7 +87,7 @@
       </div>
     </div>
   </section>
-  <section class="section-3 wf-section">
+  <section id="tech" class="section-3 wf-section">
     <div class="w-container">
       <div id="w-node-_362fafea-747b-00c1-a7cd-06dc18a08031-0977497f" class="w-layout-layout wf-layout-layout">
         <div id="w-node-ac6cd066-b58b-1d4d-0980-d88f83b9b658-0977497f" class="w-layout-cell cell-3">
@@ -141,7 +142,7 @@
       </div>
     </div>
   </section>
-  <section class="section-5 wf-section">
+  <section id="feedback" class="section-5 wf-section">
     <div class="container-6 w-container">
       <div id="w-node-_2078e8eb-33ad-da99-4b56-6028578ffef4-0977497f" class="w-layout-layout wf-layout-layout">
         <div id="w-node-_98b6548e-9a7a-b6f7-3b2d-c89eedfdc56a-0977497f" class="w-layout-cell">
@@ -153,9 +154,14 @@
         </div>
         <div id="w-node-cd5b7935-5d07-abf9-1ed5-83ac0854b977-0977497f" class="w-layout-cell cell-4">
           <div class="w-form">
-            <form id="email-form" name="email-form" data-name="Email Form" action="/api/feedback" method="post" class="form"><label for="name" class="field-label">Имя</label><input type="text" class="text-field w-input" maxlength="256" name="name" data-name="Name" placeholder="" id="name" required=""><label for="email" class="field-label-2">Email</label><input type="email" class="text-field-2 w-input" maxlength="256" name="email" data-name="Email" placeholder="" id="email" required=""><label for="field" class="field-label-3">Сообщение</label><textarea placeholder="Ваше сообщение" maxlength="5000" id="field" name="field" data-name="Field" class="textarea w-input"></textarea><input type="submit" value="Отправить" data-wait="Please wait..." class="submit-button w-button"></form>
-            <div class="w-form-done">
-              <div>Thank you! Your submission has been received!</div>
+            <form id="email-form" name="email-form" data-name="Email Form" method="post" class="form"><label for="name" class="field-label">Имя</label><input type="text" class="text-field w-input" maxlength="256" name="name" data-name="Name" placeholder="" id="name" required=""><label for="email" class="field-label-2">Email</label><input type="email" class="text-field-2 w-input" maxlength="256" name="email" data-name="Email" placeholder="" id="email" required=""><label for="message" class="field-label-3">Сообщение</label><textarea id="message" name="field" maxlength="5000" data-name="Field" placeholder="Ваше сообщение" class="textarea w-input"></textarea><input type="submit" id="send-msg-button" value="Отправить" data-wait="Please wait..." class="submit-button w-button"></form>
+            <div class="success-message w-form-done">
+              <div>
+                <div class="text-block-3">Принято! Есть ещё вопрос?</div>
+              </div>
+              <div class="div-block-7">
+                <a id="new-question-btn" href="#" class="button-3 w-button">Задать вопрос</a>
+              </div>
             </div>
             <div class="w-form-fail">
               <div>Oops! Something went wrong while submitting the form.</div>
@@ -175,5 +181,42 @@
   </div>
   <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c8.js?site=6470d85173d05fa30977497b" type="text/javascript" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
   <script src="js/webflow.js" type="text/javascript"></script>
+  <script type="text/javascript">
+    function formSubmit(event) {
+        var url = "/api/feedback";
+        var request = new XMLHttpRequest();
+        request.open('POST', url, true);
+        request.onload = function() {
+            // request successful
+            // we can use server response to our request now
+            console.log(request.responseText);
+        };
+        request.onerror = function() {
+            // request failed
+        };
+        request.send(new FormData(event.target)); // create FormData from form that triggered event
+        event.preventDefault();
+    }
+    // and you can attach form submit event like this for example
+    function attachFormSubmitEvent(formId){
+      document.getElementById(formId).addEventListener("submit", formSubmit);
+    }
+    function domReady(fn) {
+      // If we're early to the party
+      document.addEventListener("DOMContentLoaded", fn);
+      // If late; I mean on time.
+      if (document.readyState === "interactive" || document.readyState === "complete" ) {
+        fn();
+      }
+    }
+
+    domReady(
+            () => {
+              console.log("DOM is ready, attach listeners");
+              attachFormSubmitEvent("email-form");
+            }
+    );
+</script>
+
 </body>
 </html>
