--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><!--  This site was created in Webflow. https://www.webflow.com  -->
-<!--  Last Published: Sun May 28 2023 12:13:59 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Sun May 28 2023 13:17:33 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="6470d85173d05fa30977497f" data-wf-site="6470d85173d05fa30977497b">
 <head>
   <meta charset="utf-8">
@@ -126,7 +126,7 @@
           </div>
         </div>
         <div id="w-node-_15052cdd-af5c-fd55-4be0-9854e58102bc-0977497f" class="w-layout-cell cell-6">
-          <div class="div-block-5"><img src="https://d3e54v103j8qbb.cloudfront.net/plugins/Basic/assets/placeholder.60f9b1840c.svg" loading="lazy" height="200" alt="" class="image-4"></div>
+          <div class="div-block-5"><img src="images/small_portrait.jpg" loading="lazy" height="200" srcset="images/small_portrait.jpg 500w, images/small_portrait.jpg 800w, images/small_portrait.jpg 1080w, images/small_portrait.jpg 1600w, images/small_portrait.jpg 2000w, images/small_portrait.jpg 2360w" sizes="205.3000030517578px" alt="" class="image-4"></div>
           <div>
             <h3 class="heading-7">Архитектор</h3>
             <p class="paragraph-9">Разработка концепции. Построение процессов</p>
@@ -144,11 +144,11 @@
   </section>
   <section id="feedback" class="section-5 wf-section">
     <div class="container-6 w-container">
-      <div id="w-node-_2078e8eb-33ad-da99-4b56-6028578ffef4-0977497f" class="w-layout-layout wf-layout-layout">
+      <div id="w-node-_2078e8eb-33ad-da99-4b56-6028578ffef4-0977497f" class="w-layout-layout quick-stack-3 wf-layout-layout">
         <div id="w-node-_98b6548e-9a7a-b6f7-3b2d-c89eedfdc56a-0977497f" class="w-layout-cell">
           <h1 class="heading-5">Вопросы, предложения</h1>
         </div>
-        <div id="w-node-e3dfaa61-e736-0cfa-4c8a-c8c6f4dfa36b-0977497f" class="w-layout-cell"></div>
+        <div id="w-node-e3dfaa61-e736-0cfa-4c8a-c8c6f4dfa36b-0977497f" class="w-layout-cell cell-8"></div>
         <div id="w-node-d0fcea55-4d29-12ae-5f82-b9c66f5095aa-0977497f" class="w-layout-cell">
           <p class="paragraph-7">можно направить нам, заполнив форму обратной связи:</p>
         </div>
@@ -182,41 +182,39 @@
   <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c8.js?site=6470d85173d05fa30977497b" type="text/javascript" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
   <script src="js/webflow.js" type="text/javascript"></script>
   <script type="text/javascript">
-    function formSubmit(event) {
-        var url = "/api/feedback";
-        var request = new XMLHttpRequest();
-        request.open('POST', url, true);
-        request.onload = function() {
-            // request successful
-            // we can use server response to our request now
-            console.log(request.responseText);
-        };
-        request.onerror = function() {
-            // request failed
-        };
-        request.send(new FormData(event.target)); // create FormData from form that triggered event
-        event.preventDefault();
+  function formSubmit(event) {
+      var url = "/api/feedback";
+      var request = new XMLHttpRequest();
+      request.open('POST', url, true);
+      request.onload = function() { 
+          // request successful
+          // we can use server response to our request now
+          console.log(request.responseText);
+      };
+      request.onerror = function() {
+          // request failed
+      };
+      request.send(new FormData(event.target)); // create FormData from form that triggered event
+      event.preventDefault();
+  }
+  // and you can attach form submit event like this for example
+  function attachFormSubmitEvent(formId){
+    document.getElementById(formId).addEventListener("submit", formSubmit);
+  }
+  function domReady(fn) {
+    // If we're early to the party
+    document.addEventListener("DOMContentLoaded", fn);
+    // If late; I mean on time.
+    if (document.readyState === "interactive" || document.readyState === "complete" ) {
+      fn();
     }
-    // and you can attach form submit event like this for example
-    function attachFormSubmitEvent(formId){
-      document.getElementById(formId).addEventListener("submit", formSubmit);
-    }
-    function domReady(fn) {
-      // If we're early to the party
-      document.addEventListener("DOMContentLoaded", fn);
-      // If late; I mean on time.
-      if (document.readyState === "interactive" || document.readyState === "complete" ) {
-        fn();
-      }
-    }
-
-    domReady(
-            () => {
+  }
+  domReady(
+      () => {
               console.log("DOM is ready, attach listeners");
               attachFormSubmitEvent("email-form");
-            }
-    );
+      }
+  );
 </script>
-
 </body>
 </html>
