--- a/index.html
+++ b/index.html
@@ -182,39 +182,42 @@
   <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c8.js?site=6470d85173d05fa30977497b" type="text/javascript" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
   <script src="js/webflow.js" type="text/javascript"></script>
   <script type="text/javascript">
-  function formSubmit(event) {
-      var url = "/api/feedback";
-      var request = new XMLHttpRequest();
-      request.open('POST', url, true);
-      request.onload = function() { 
-          // request successful
-          // we can use server response to our request now
-          console.log(request.responseText);
-      };
-      request.onerror = function() {
-          // request failed
-      };
-      request.send(new FormData(event.target)); // create FormData from form that triggered event
-      event.preventDefault();
-  }
-  // and you can attach form submit event like this for example
-  function attachFormSubmitEvent(formId){
-    document.getElementById(formId).addEventListener("submit", formSubmit);
-  }
-  function domReady(fn) {
-    // If we're early to the party
-    document.addEventListener("DOMContentLoaded", fn);
-    // If late; I mean on time.
-    if (document.readyState === "interactive" || document.readyState === "complete" ) {
-      fn();
+    function formSubmit(event) {
+        let url = "/api/feedback";
+        let request = new XMLHttpRequest();
+        request.open('POST', url, true);
+        request.onload = function() {
+            // request successful
+            // we can use server response to our request now
+            console.log(request.responseText);
+        };
+        request.onerror = function() {
+            // request failed
+        };
+
+        let feedback = new FormData(event.target);
+        request.send(feedback); // create FormData from form that triggered event
+        event.preventDefault();
     }
-  }
-  domReady(
-      () => {
-              console.log("DOM is ready, attach listeners");
-              attachFormSubmitEvent("email-form");
+    // and you can attach form submit event like this for example
+    function attachFormSubmitEvent(formId){
+      document.getElementById(formId).addEventListener("submit", formSubmit);
+    }
+
+    function domReady(fn) {
+      // If we're early to the party
+      document.addEventListener("DOMContentLoaded", fn);
+      // If late; I mean on time.
+      if (document.readyState === "interactive" || document.readyState === "complete" ) {
+        fn();
       }
-  );
-</script>
+    }
+    domReady(
+        () => {
+                console.log("DOM is ready, attach listeners");
+                attachFormSubmitEvent("email-form");
+        }
+    );
+  </script>
 </body>
 </html>
