--- a/index.html
+++ b/index.html
@@ -163,9 +163,9 @@
                 <a id="new-question-btn" href="#" class="button-3 w-button">Задать вопрос</a>
               </div>
             </div>
-            <div class="w-form-fail">
-              <div>Oops! Something went wrong while submitting the form.</div>
-            </div>
+<!--            <div class="w-form-fail">-->
+<!--              <div>Oops! Something went wrong while submitting the form.</div>-->
+<!--            </div>-->
           </div>
         </div>
         <div id="w-node-_46832d46-ad32-17c2-89b0-49fe31d229d4-0977497f" class="w-layout-cell"></div>
@@ -195,8 +195,15 @@
             // request failed
         };
 
-        let feedback = new FormData(event.target);
-        request.send(feedback); // create FormData from form that triggered event
+        let formData = new FormData(event.target);
+        let feedback = Object.fromEntries(
+                        Array.from(formData.keys())
+                              .map(
+                                key => [key, formData.getAll(key).length > 1 ? formData.getAll(key) : formData.get(key)]
+                              )
+                      );
+        let feedbackJson = JSON.stringify(feedback);
+        request.send(feedbackJson); // create FormData from form that triggered event
         event.preventDefault();
     }
     // and you can attach form submit event like this for example
