--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><!--  This site was created in Webflow. https://www.webflow.com  -->
-<!--  Last Published: Sun May 28 2023 13:17:33 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Sun May 28 2023 13:54:31 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="6470d85173d05fa30977497f" data-wf-site="6470d85173d05fa30977497b">
 <head>
   <meta charset="utf-8">
@@ -49,7 +49,7 @@
         </li>
       </ul>
       <div class="div-block">
-        <a href="#" class="button w-button">Попробуйте Plumbier !</a>
+        <a id="letsgo-btn" href="#" class="button w-button">Попробуйте Plumbier !</a>
       </div>
     </div>
   </section>
@@ -83,7 +83,7 @@
         </div>
       </div>
       <div class="div-block-3">
-        <a href="#" class="button-2 w-button">Испытать!</a>
+        <a id="letsgo-next-btn" href="/api/sayhi" class="button-2 w-button">Испытать!</a>
       </div>
     </div>
   </section>
@@ -126,7 +126,7 @@
           </div>
         </div>
         <div id="w-node-_15052cdd-af5c-fd55-4be0-9854e58102bc-0977497f" class="w-layout-cell cell-6">
-          <div class="div-block-5"><img src="images/small_portrait.jpg" loading="lazy" height="200" srcset="images/small_portrait.jpg 500w, images/small_portrait.jpg 800w, images/small_portrait.jpg 1080w, images/small_portrait.jpg 1600w, images/small_portrait.jpg 2000w, images/small_portrait.jpg 2360w" sizes="205.3000030517578px" alt="" class="image-4"></div>
+          <div class="div-block-5"><img src="images/small_portrait.jpg" loading="lazy" height="200" sizes="205.3000030517578px" srcset="images/small_portrait-p-500.jpg 500w, images/small_portrait-p-800.jpg 800w, images/small_portrait-p-1080.jpg 1080w, images/small_portrait-p-1600.jpg 1600w, images/small_portrait-p-2000.jpg 2000w, images/small_portrait.jpg 2360w" alt="" class="image-4"></div>
           <div>
             <h3 class="heading-7">Архитектор</h3>
             <p class="paragraph-9">Разработка концепции. Построение процессов</p>
@@ -154,7 +154,7 @@
         </div>
         <div id="w-node-cd5b7935-5d07-abf9-1ed5-83ac0854b977-0977497f" class="w-layout-cell cell-4">
           <div class="w-form">
-            <form id="email-form" name="email-form" data-name="Email Form" method="post" class="form"><label for="name" class="field-label">Имя</label><input type="text" class="text-field w-input" maxlength="256" name="name" data-name="Name" placeholder="" id="name" required=""><label for="email" class="field-label-2">Email</label><input type="email" class="text-field-2 w-input" maxlength="256" name="email" data-name="Email" placeholder="" id="email" required=""><label for="message" class="field-label-3">Сообщение</label><textarea id="message" name="field" maxlength="5000" data-name="Field" placeholder="Ваше сообщение" class="textarea w-input"></textarea><input type="submit" id="send-msg-button" value="Отправить" data-wait="Please wait..." class="submit-button w-button"></form>
+            <form id="email-form" name="email-form" data-name="Email Form" method="post" class="form"><label for="name-2" class="field-label">Имя</label><input type="text" class="text-field w-input" maxlength="256" name="name" data-name="name" placeholder="" id="name-2" required=""><label for="email-2" class="field-label-2">Email</label><input type="email" class="text-field-2 w-input" maxlength="256" name="email" data-name="email" placeholder="" id="email-2" required=""><label for="message-2" class="field-label-3">Сообщение</label><textarea id="message-2" name="message" maxlength="5000" data-name="message" placeholder="Ваше сообщение" class="textarea w-input"></textarea><input type="submit" id="send-msg-button" value="Отправить" data-wait="Please wait..." class="submit-button w-button"></form>
             <div class="success-message w-form-done">
               <div>
                 <div class="text-block-3">Принято! Есть ещё вопрос?</div>
@@ -163,9 +163,9 @@
                 <a id="new-question-btn" href="#" class="button-3 w-button">Задать вопрос</a>
               </div>
             </div>
-<!--            <div class="w-form-fail">-->
-<!--              <div>Oops! Something went wrong while submitting the form.</div>-->
-<!--            </div>-->
+            <div class="w-form-fail">
+              <div>Oops! Something went wrong while submitting the form.</div>
+            </div>
           </div>
         </div>
         <div id="w-node-_46832d46-ad32-17c2-89b0-49fe31d229d4-0977497f" class="w-layout-cell"></div>
@@ -195,7 +195,6 @@
         request.onerror = function() {
             // request failed
         };
-
         let formData = new FormData(event.target);  // grab FormData from form that triggered event
         // build an object from the given formData
         let feedback = Object.fromEntries(
@@ -212,7 +211,6 @@
     function attachFormSubmitEvent(formId){
       document.getElementById(formId).addEventListener("submit", formSubmit);
     }
-
     function domReady(fn) {
       // If we're early to the party
       document.addEventListener("DOMContentLoaded", fn);
@@ -227,6 +225,6 @@
                 attachFormSubmitEvent("email-form");
         }
     );
-  </script>
+</script>
 </body>
 </html>
