--- a/index.html
+++ b/index.html
@@ -182,6 +182,17 @@
   <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c8.js?site=6470d85173d05fa30977497b" type="text/javascript" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
   <script src="js/webflow.js" type="text/javascript"></script>
   <script type="text/javascript">
+
+    function hideElement(elemId){
+      // document.getElementById(elemId).style.visibility = 'hidden';
+      document.getElementById(elemId).style.display = 'none';
+    }
+
+    function showElement(elemId){
+      // document.getElementById(elemId).style.visibility = 'visible';
+      document.getElementById(elemId).style.display = 'block';
+    }
+
     function formSubmit(event) {
         let url = "/api/feedback";
         let request = new XMLHttpRequest();
@@ -191,6 +202,17 @@
             // request successful
             // we can use server response to our request now
             console.log(request.responseText);
+
+            event.target.dispatchEvent(
+                    new CustomEvent(
+                            "feedbackAccepted",
+                            {
+                              detail: {
+                                text: request.responseText;
+                              }
+                            }
+                    )
+            )
         };
         request.onerror = function() {
             // request failed
@@ -207,10 +229,48 @@
         request.send(feedbackJson);
         //event.preventDefault();
     }
-    // and you can attach form submit event like this for example
+
+    // attach form submit event
     function attachFormSubmitEvent(formId){
       document.getElementById(formId).addEventListener("submit", formSubmit);
+      document.getElementById(formId).addEventListener("feedbackAccepted", () => hideElement(formId));
     }
+
+    // attach form submit event to display the success message block
+    function attachSuccessBlock(blockId){
+      document.getElementById(blockId).addEventListener("feedbackAccepted", () => showElement(blockId));
+    }
+
+    function clearFormFields(){
+      // clear name field
+      let feedbackNameInput = document.getElementById("feedback-name");
+      feedbackNameInput.placeholder = "Иван";
+      feedbackNameInput.value = "";
+
+      // clear email field
+      let feedbackEmailInput = document.getElementById("feedback-email");
+      feedbackEmailInput.placeholder = "ivan@example.com";
+      feedbackEmailInput.value = "";
+
+      // clear message area
+      let feedbackMsgArea = document.getElementById("feedback-message-txt");
+      feedbackMsgArea.placeholder = "Ваше сообщение";
+      feedbackMsgArea.value = "";
+    }
+
+    function attachClearFormEvent(formId){
+      document.getElementById(formId).addEventListener("feedbackAccepted", clearFormFields);
+    }
+
+    function askNewQuestion(){
+      hideElement("success-feedback-msg");
+      showElement("email-form");
+    }
+
+    function attachButtonClick(btnId, clickFn){
+      document.getElementById(btnId).addEventListener("click", clickFn);
+    }
+
     function domReady(fn) {
       // If we're early to the party
       document.addEventListener("DOMContentLoaded", fn);
@@ -223,6 +283,9 @@
         () => {
                 console.log("DOM is ready, attach listeners");
                 attachFormSubmitEvent("email-form");
+                attachSuccessBlock("success-feedback-msg");
+                attachClearFormEvent("email-form");
+                attachButtonClick("new-question-btn",askNewQuestion);
         }
     );
 </script>
