--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><!--  This site was created in Webflow. https://www.webflow.com  -->
-<!--  Last Published: Sun May 28 2023 13:54:31 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Sun May 28 2023 15:07:27 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="6470d85173d05fa30977497f" data-wf-site="6470d85173d05fa30977497b">
 <head>
   <meta charset="utf-8">
@@ -146,7 +146,7 @@
     <div class="container-6 w-container">
       <div id="w-node-_2078e8eb-33ad-da99-4b56-6028578ffef4-0977497f" class="w-layout-layout quick-stack-3 wf-layout-layout">
         <div id="w-node-_98b6548e-9a7a-b6f7-3b2d-c89eedfdc56a-0977497f" class="w-layout-cell">
-          <h1 class="heading-5">Вопросы, предложения</h1>
+          <h1 class="heading-5">Вопросы, предложения</h1>
         </div>
         <div id="w-node-e3dfaa61-e736-0cfa-4c8a-c8c6f4dfa36b-0977497f" class="w-layout-cell cell-8"></div>
         <div id="w-node-d0fcea55-4d29-12ae-5f82-b9c66f5095aa-0977497f" class="w-layout-cell">
@@ -154,8 +154,8 @@
         </div>
         <div id="w-node-cd5b7935-5d07-abf9-1ed5-83ac0854b977-0977497f" class="w-layout-cell cell-4">
           <div class="w-form">
-            <form id="email-form" name="email-form" data-name="Email Form" method="post" class="form"><label for="name-2" class="field-label">Имя</label><input type="text" class="text-field w-input" maxlength="256" name="name" data-name="name" placeholder="" id="name-2" required=""><label for="email-2" class="field-label-2">Email</label><input type="email" class="text-field-2 w-input" maxlength="256" name="email" data-name="email" placeholder="" id="email-2" required=""><label for="message-2" class="field-label-3">Сообщение</label><textarea id="message-2" name="message" maxlength="5000" data-name="message" placeholder="Ваше сообщение" class="textarea w-input"></textarea><input type="submit" id="send-msg-button" value="Отправить" data-wait="Please wait..." class="submit-button w-button"></form>
-            <div class="success-message w-form-done">
+            <form id="email-form" name="email-form" data-name="Email Form" method="post" class="form"><label for="feedback-name" class="field-label">Имя</label><input type="text" class="text-field w-input" maxlength="256" name="name" data-name="name" placeholder="" id="feedback-name" required=""><label for="feedback-email" class="field-label-2">Email</label><input type="email" class="text-field-2 w-input" maxlength="256" name="email" data-name="email" placeholder="" id="feedback-email" required=""><label for="feedback-message-txt" class="field-label-3">Сообщение</label><textarea id="feedback-message-txt" name="message" maxlength="5000" data-name="message" placeholder="Ваше сообщение" class="textarea w-input"></textarea><input type="submit" id="send-msg-button" value="Отправить" data-wait="Please wait..." class="submit-button w-button"></form>
+            <div id="success-feedback-msg" class="success-message w-form-done">
               <div>
                 <div class="text-block-3">Принято! Есть ещё вопрос?</div>
               </div>
@@ -163,7 +163,7 @@
                 <a id="new-question-btn" href="#" class="button-3 w-button">Задать вопрос</a>
               </div>
             </div>
-            <div class="w-form-fail">
+            <div id="fail-feedback-msg" class="w-form-fail">
               <div>Oops! Something went wrong while submitting the form.</div>
             </div>
           </div>
@@ -182,17 +182,14 @@
   <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c8.js?site=6470d85173d05fa30977497b" type="text/javascript" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
   <script src="js/webflow.js" type="text/javascript"></script>
   <script type="text/javascript">
-
     function hideElement(elemId){
       // document.getElementById(elemId).style.visibility = 'hidden';
       document.getElementById(elemId).style.display = 'none';
     }
-
     function showElement(elemId){
       // document.getElementById(elemId).style.visibility = 'visible';
       document.getElementById(elemId).style.display = 'block';
     }
-
     function formSubmit(event) {
         let url = "/api/feedback";
         let request = new XMLHttpRequest();
@@ -202,13 +199,12 @@
             // request successful
             // we can use server response to our request now
             console.log(request.responseText);
-
             event.target.dispatchEvent(
                     new CustomEvent(
                             "feedbackAccepted",
                             {
                               detail: {
-                                text: request.responseText;
+                                text: request.responseText
                               }
                             }
                     )
@@ -229,48 +225,39 @@
         request.send(feedbackJson);
         //event.preventDefault();
     }
-
     // attach form submit event
     function attachFormSubmitEvent(formId){
       document.getElementById(formId).addEventListener("submit", formSubmit);
       document.getElementById(formId).addEventListener("feedbackAccepted", () => hideElement(formId));
     }
-
     // attach form submit event to display the success message block
     function attachSuccessBlock(blockId){
       document.getElementById(blockId).addEventListener("feedbackAccepted", () => showElement(blockId));
     }
-
     function clearFormFields(){
       // clear name field
       let feedbackNameInput = document.getElementById("feedback-name");
       feedbackNameInput.placeholder = "Иван";
       feedbackNameInput.value = "";
-
       // clear email field
       let feedbackEmailInput = document.getElementById("feedback-email");
       feedbackEmailInput.placeholder = "ivan@example.com";
       feedbackEmailInput.value = "";
-
       // clear message area
       let feedbackMsgArea = document.getElementById("feedback-message-txt");
       feedbackMsgArea.placeholder = "Ваше сообщение";
       feedbackMsgArea.value = "";
     }
-
     function attachClearFormEvent(formId){
       document.getElementById(formId).addEventListener("feedbackAccepted", clearFormFields);
     }
-
     function askNewQuestion(){
       hideElement("success-feedback-msg");
       showElement("email-form");
     }
-
     function attachButtonClick(btnId, clickFn){
       document.getElementById(btnId).addEventListener("click", clickFn);
     }
-
     function domReady(fn) {
       // If we're early to the party
       document.addEventListener("DOMContentLoaded", fn);
