--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
                       );
         let feedbackJson = JSON.stringify(feedback);
         request.send(feedbackJson);
-        //event.preventDefault();
+        event.preventDefault();
     }
     // attach form submit event
     function attachFormSubmitEvent(formId){
